--- a/main.ipynb
+++ b/main.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 331,
    "id": "ca7a893b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import calendar\n",
     "\n",
     "# Paths to your CSV files\n",
     "file1 = './Products.csv'\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 332,
    "id": "eb62eca5",
    "metadata": {},
    "outputs": [],
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 333,
    "id": "e87368d4",
    "metadata": {},
    "outputs": [],
@@ -107,7 +108,8 @@
     "df_Products.columns = df_Products.columns.str.strip()\n",
     "enriched_data = pd.merge(df_transactions, df_Products, on=\"Product\", how=\"left\")\n",
     "df = pd.DataFrame(enriched_data)\n",
-    "print(df)"
+    "output_filename = \"enriched_data.csv\"\n",
+    "df.to_csv(output_filename, index=False)"
    ]
   },
   {
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 334,
    "id": "ae4c9221",
    "metadata": {},
    "outputs": [],
@@ -129,7 +131,8 @@
     "df[['Segment', 'Country']] = df['Segement_Country'].str.split('-', expand=True)\n",
     "# Drop the original 'Segement_Country' column if it's no longer needed\n",
     "df = df.drop(columns=['Segement_Country'])\n",
-    "print(df)"
+    "output_filename = \"drop_Segement_Country.csv\"\n",
+    "df.to_csv(output_filename, index=False)"
    ]
   },
   {
@@ -150,10 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 335,
    "id": "c4dd4832",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: 0 products in transactions were not found in products.\n",
+      "Total missing values after merge: 53\n"
+     ]
+    }
+   ],
    "source": [
     "def validate_merge(df_transactions, df_products, merged_df, key_column=\"Product\"):\n",
     "    # Check if all products in df_transactions exist in df_products\n",
@@ -179,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 336,
    "id": "c879747c",
    "metadata": {},
    "outputs": [
@@ -266,59 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 337,
    "id": "08ad08f0",
    "metadata": {
     "lines_to_next_cell": 1
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Product Discount Band  Units Sold  Sale Price  Gross Sales  Discounts  \\\n",
-      "0    Amarilla           Low      1778.0       350.0     622300.0   24892.00   \n",
-      "1    Amarilla           NaN      2750.0       350.0     962500.0       0.00   \n",
-      "2    Amarilla        Medium       552.0       350.0     193200.0    9660.00   \n",
-      "3    Amarilla        Medium      1228.0       350.0     429800.0   21490.00   \n",
-      "4    Amarilla        Medium      1269.0       350.0     444150.0   39973.50   \n",
-      "..        ...           ...         ...         ...          ...        ...   \n",
-      "695       VTT          High      1010.0       300.0     303000.0   42420.00   \n",
-      "696       VTT          High       492.0        15.0       7380.0    1107.00   \n",
-      "697       VTT          High      1175.0        15.0      17625.0    2643.75   \n",
-      "698       VTT          High       552.0       125.0      69000.0   10350.00   \n",
-      "699       VTT          High      1806.0        12.0      21672.0    3250.80   \n",
-      "\n",
-      "         Sales      COGS     Profit       Date  Month Number  ProductID  \\\n",
-      "0    597408.00  462280.0  135128.00  12/1/2013            12          6   \n",
-      "1    962500.00  715000.0  247500.00   2/1/2014             2          6   \n",
-      "2    183540.00  143520.0   40020.00   8/1/2014             8          6   \n",
-      "3    408310.00  319280.0   89030.00  10/1/2013            10          6   \n",
-      "4    404176.50  329940.0   74236.50  10/1/2014            10          6   \n",
-      "..         ...       ...        ...        ...           ...        ...   \n",
-      "695  260580.00  252500.0    8080.00  10/1/2014            10          5   \n",
-      "696    6273.00    4920.0    1353.00   7/1/2014             7          5   \n",
-      "697   14981.25   11750.0    3231.25  10/1/2014            10          5   \n",
-      "698   58650.00   66240.0        NaN  11/1/2014            11          5   \n",
-      "699   18421.20    5418.0   13003.20   5/1/2014             5          5   \n",
-      "\n",
-      "            Category  Manufacturing Price           Segment  Country  \n",
-      "0    Climate Control                260.0        Government   Canada  \n",
-      "1    Climate Control                260.0        Government   France  \n",
-      "2    Climate Control                260.0        Government   Canada  \n",
-      "3    Climate Control                260.0        Government   Canada  \n",
-      "4    Climate Control                260.0        Government   Canada  \n",
-      "..               ...                  ...               ...      ...  \n",
-      "695           Energy                250.0    Small Business      USA  \n",
-      "696           Energy                250.0         Midmarket  Germany  \n",
-      "697           Energy                250.0         Midmarket  Germany  \n",
-      "698           Energy                250.0        Enterprise  Germany  \n",
-      "699           Energy                250.0  Channel Partners      USA  \n",
-      "\n",
-      "[700 rows x 16 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Define a function to clean the financial fields\n",
@@ -343,7 +308,8 @@
     "for field in financial_fields:\n",
     "    df[field] = df[field].apply(clean_financial_field)\n",
     "    \n",
-    "print(df)    "
+    "output_filename = \"financial_fields.csv\"\n",
+    "df.to_csv(output_filename, index=False) "
    ]
   },
   {
@@ -367,7 +333,15 @@
    "id": "891051d9",
    "metadata": {},
    "source": [
-    "טיפול בנתוני התאריך"
+    "טיפול בנתוני התאריך\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a62a028",
+   "metadata": {},
+   "source": [
+    "העמודה תאריך בטבלה זו מייצגת את העסקה או את תאריך המכירה שבו התרחשה מכירה מסוימת. הוא מתעד את היום, החודש והשנה המדויקים של המכירה."
    ]
   },
   {
@@ -375,36 +349,18 @@
    "id": "22e9ee2a",
    "metadata": {},
    "source": [
-    "1.Format Date Column"
+    "2,3.Format Date Column and after it formated i create two more columns ,month_name,and year.\n",
+    "also i print the wrong/unusual dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 338,
    "id": "6b5e55b6",
    "metadata": {
     "lines_to_next_cell": 1
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      2013-12-01\n",
-      "1      2014-02-01\n",
-      "2      2014-08-01\n",
-      "3      2013-10-01\n",
-      "4      2014-10-01\n",
-      "          ...    \n",
-      "695    2014-10-01\n",
-      "696    2014-07-01\n",
-      "697    2014-10-01\n",
-      "698    2014-11-01\n",
-      "699    2014-05-01\n",
-      "Name: Date, Length: 700, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Format Date Column\n",
@@ -422,7 +378,8 @@
     "            corrected_date = date\n",
     "    except:\n",
     "        # Handle invalid or unusual dates\n",
-    "        corrected_date = pd.Timestamp(year=2013, month=row['Month Number'], day=1)  # Default correction\n",
+    "        print(row['Date'])\n",
+    "        \n",
     "\n",
     "    return corrected_date\n",
     "\n",
@@ -430,92 +387,106 @@
     "df['Date'] = df.apply(validate_and_fix_date, axis=1)\n",
     "\n",
     "# Format the Corrected Date into a single consistent format\n",
-    "df['Date'] = df['Date'].dt.strftime('%Y-%m-%d')\n",
+    "df['Date'] = df['Date'].dt.strftime('%d-%m-%Y')\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['Year']=df['Date'].dt.year\n",
     "\n",
-    "print(df['Date'])"
+    "df[\"Month Name\"] = df[\"Month Number\"].apply(lambda x: calendar.month_name[x])\n",
+    "# df[\"Year\"] = df[\"Date\"].dt.year\n",
+    "\n",
+    "output_filename = \"add_year_month.csv\"\n",
+    "df.to_csv(output_filename, index=False) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "587fe0b0",
+   "metadata": {},
+   "source": [
+    "6.txt תשובה לשלאלה 4 בקובץ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "680274ed",
+   "metadata": {},
+   "source": [
+    "יצירת עמודות מחושבות"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2d385c",
+   "metadata": {},
+   "source": [
+    "1.add to df two columns : Discount Impact,Profit Margin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
    "id": "54fbda31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#---------------part 6------------------\n",
     "#create new Discount Impact column\n",
-    "df['Discount Impact'] = df['Discounts'] / df['Sales']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c159c29c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Format Discount Impact as a percentage (optional)\n",
-    "df['Discount Impact (%)'] = df['Discount Impact'] * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7edc4792",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Discount Impact'] = df['Discounts'] / df['Sales']\n",
     "df['Profit Margin'] = (df['Profit'] / df['Sales']) * 100\n",
-    "output_filename = \"create_three_new_columns.csv\"\n",
+    "output_filename = \"create_two_new_columns.csv\"\n",
     "df.to_csv(output_filename, index=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9780b316",
+   "metadata": {},
+   "source": [
+    "2.create 3 metrics base on the data, the explanation about the metrics is on 7.txt file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 310,
    "id": "f37f420c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Metric 1: Revenue Contribution\n",
-    "df['Revenue Contribution (%)'] = (df['Gross Sales'] / df['Gross Sales'].sum()) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fbcb9dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Revenue Contribution (%)'] = (df['Gross Sales'] / df['Gross Sales'].sum()) * 100\n",
     "# Metric 2: Discount Effectiveness\n",
     "# Avoid dividing by zero for entries with no discounts\n",
     "df['Discount Effectiveness'] = df.apply(\n",
     "    lambda row: row['Profit'] / row['Discounts'] if row['Discounts'] != 0 else None, axis=1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d697061d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Metric 3: Cost-to-Sales Ratio\n",
+    ")\n",
     "df['Cost-to-Sales Ratio (%)'] = (df['COGS'] / df['Sales']) * 100\n",
     "output_filename = \"create_three_metrics.csv\"\n",
     "df.to_csv(output_filename, index=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dfecdc6",
+   "metadata": {},
+   "source": [
+    "יצירת טבלאות מסכמות בעזרת פיווטים "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fafa438",
+   "metadata": {},
+   "source": [
+    "טבלת מוצר (Product):\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "id": "bb8b85a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#---------------part 7------------------\n",
+    "\n",
     "# Pivot Table for Product\n",
     "product_table = pd.pivot_table(\n",
     "    df,\n",
@@ -539,8 +510,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d37c290b",
+   "metadata": {},
+   "source": [
+    "טבלת סגמנט (Segment):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 312,
    "id": "d4692090",
    "metadata": {},
    "outputs": [],
@@ -568,8 +547,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6a6883a",
+   "metadata": {},
+   "source": [
+    "טבלת אזור גיאוגרפי (Country):\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 313,
    "id": "6616dc49",
    "metadata": {},
    "outputs": [],
@@ -583,7 +570,7 @@
     "        \"Profit Margin\": \"mean\",\n",
     "        \"Discount Impact\": \"mean\",\n",
     "        \"Profit\": \"sum\",\n",
-    "        \"Sales\": \"sum\"\n",
+    "        \"Sales\": \"sum\",\n",
     "    }\n",
     ").rename(columns={\n",
     "    \"Profit Margin\": \"Avg_Profit_Margin\",\n",
@@ -592,24 +579,31 @@
     "    \"Sales\": \"Total_Sales\"\n",
     "})\n",
     "country_table[\"Total_Transactions\"] = df.groupby(\"Country\")[\"Units Sold\"].count()\n",
+    "country_table = country_table.reset_index()\n",
+    "\n",
     "output_filename = \"country_table_using_pivot.csv\"\n",
     "country_table.to_csv(output_filename, index=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27e69339",
+   "cell_type": "markdown",
+   "id": "a48dc60e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#---------------part 8----------------------\n",
-    "df['Year'] = pd.to_datetime(df['Date']).dt.year"
+    "זיהוי מגמות לאורך זמן \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0244c9a",
+   "metadata": {},
+   "source": [
+    "ניתוח מגמות לפי חודשים (Monthly Trends):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "id": "11615917",
    "metadata": {},
    "outputs": [],
@@ -620,23 +614,22 @@
     "    Total_Profit=('Profit', 'sum'),\n",
     "    Avg_Discount_Impact=('Discount Impact', 'mean'),\n",
     "    Avg_Profit_Margin=('Profit Margin', 'mean')\n",
-    ").reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82ac4209",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").reset_index()\n",
     "output_filename = \"monthly_trends.csv\"\n",
-    "df.to_csv(output_filename, index=False)"
+    "monthly_trends.to_csv(output_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb77c103",
+   "metadata": {},
+   "source": [
+    "ניתוח מגמות לפי שנים (Yearly Trends):\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 315,
    "id": "f539af33",
    "metadata": {},
    "outputs": [],
@@ -647,73 +640,64 @@
     "    Total_Profit=('Profit', 'sum'),\n",
     "    Avg_Discount_Impact=('Discount Impact', 'mean'),\n",
     "    Avg_Profit_Margin=('Profit Margin', 'mean')\n",
-    ").reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5015c497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").reset_index()\n",
     "output_filename = \"annual_trends.csv\"\n",
-    "df.to_csv(output_filename, index=False)"
+    "annual_trends.to_csv(output_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "405da0f1",
+   "metadata": {},
+   "source": [
+    "ניתוח של מגמות רבעוניות ,הסבר נמצא בקובץ 8 והקוד למטה מייצר את הטבלה "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 316,
    "id": "b1fbcea1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#---------------part 9-------------------\n",
+    "\n",
     "# Create a Quarter column\n",
-    "df['Quarter'] = pd.to_datetime(df['Date']).dt.quarter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc79116a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Quarter'] = pd.to_datetime(df['Date']).dt.quarter\n",
+    "\n",
     "# Group by Quarter and Product to calculate quarterly trends\n",
     "quarterly_trends = df.groupby(['Quarter', 'Product']).agg(\n",
     "    Total_Sales=('Sales', 'sum'),\n",
     "    Avg_Profit_Margin=('Profit Margin', 'mean'),\n",
     "    Total_Discounts=('Discounts', 'sum'),\n",
     "    Total_Profit=('Profit', 'sum')\n",
-    ").reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "204b39f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_filename = \"quarterly_trends.csv\"\n",
-    "quarterly_trends.to_csv(output_filename, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8d7d129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").reset_index()\n",
+    "\n",
     "# Rename columns for clarity\n",
     "quarterly_trends = quarterly_trends.rename(columns={\n",
     "    'Total_Sales': 'Total_Quarterly_Sales',\n",
     "    'Avg_Profit_Margin': 'Avg_Quarterly_Profit_Margin',\n",
     "    'Total_Discounts': 'Total_Quarterly_Discounts',\n",
     "    'Total_Profit': 'Total_Quarterly_Profit'\n",
-    "})"
+    "})\n",
+    "\n",
+    "output_filename = \"quarterly_trends.csv\"\n",
+    "quarterly_trends.to_csv(output_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe5c8dbf",
+   "metadata": {},
+   "source": [
+    "יצירת פילטרים מותאמים לניתוח ממוקד ויזהוי בעיות עסקיות\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39801824",
+   "metadata": {},
+   "source": [
+    "זיהוי מוצרים בעייתיים\n"
    ]
   },
   {
