--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 373,
    "id": "ca7a893b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 374,
    "id": "eb62eca5",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 375,
    "id": "e87368d4",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 376,
    "id": "ae4c9221",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 377,
    "id": "c4dd4832",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 378,
    "id": "c879747c",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 379,
    "id": "08ad08f0",
    "metadata": {
     "lines_to_next_cell": 1
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 380,
    "id": "6b5e55b6",
    "metadata": {
     "lines_to_next_cell": 1
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 381,
    "id": "54fbda31",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 382,
    "id": "f37f420c",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 383,
    "id": "bb8b85a9",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 384,
    "id": "d4692090",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 385,
    "id": "6616dc49",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 386,
    "id": "11615917",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 387,
    "id": "f539af33",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 388,
    "id": "b1fbcea1",
    "metadata": {},
    "outputs": [],
@@ -702,91 +702,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b59089a",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "execution_count": 389,
+   "id": "592fe5ed",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the thresholds for underperforming products\n",
-    "low_profit_threshold = 0.07  # Profit Margin < 7%\n",
-    "high_discount_threshold = 0.085  # Discount Impact > 8.5% (Top Quartile)"
+    "# Calculate overall averages for reference\n",
+    "avg_discount_impact = df[\"Discount Impact\"].mean()\n",
+    "avg_profit_margin = df[\"Profit Margin\"].mean()\n",
+    "\n",
+    "# Filter problematic products\n",
+    "problematic_products = df[\n",
+    "    (df[\"Discount Impact\"] > avg_discount_impact) &  # Higher than average discount impact\n",
+    "    (df[\"Profit Margin\"] < avg_profit_margin)        # Lower than average profit margin\n",
+    "]\n",
+    "\n",
+    "# Aggregate results at the product level\n",
+    "problematic_products_summary = problematic_products.groupby(\"Product\").agg(\n",
+    "    Avg_Discount_Impact=(\"Discount Impact\", \"mean\"),\n",
+    "    Avg_Profit_Margin=(\"Profit Margin\", \"mean\"),\n",
+    "    Total_Sales=(\"Sales\", \"sum\"),\n",
+    "    Total_Profit=(\"Profit\", \"sum\")\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort by highest discount impact\n",
+    "problematic_products_summary = problematic_products_summary.sort_values(\n",
+    "    by=\"Avg_Discount_Impact\", ascending=False\n",
+    ")\n",
+    "\n",
+    "output_filename = \"problematic_products_summary.csv\"\n",
+    "problematic_products_summary.to_csv(output_filename, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ce7d18",
+   "metadata": {},
+   "source": [
+    "בניית טבלה שתעזור לי למצוא מוצרים המציגים ביצועים חלשים "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9c0c51a",
+   "execution_count": 390,
+   "id": "b6e23275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Product, Segment, Sales, Profit, Discount Impact, Profit Margin]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
-    "output_filename = \"underperforming_products_before.csv\"\n",
-    "df.to_csv(output_filename, index=False)\n",
-    "# Filter the data based on criteria\n",
+    "# Define thresholds for filtering\n",
+    "profit_margin_threshold = 7  # Bottom quartile (low profitability)\n",
+    "discount_impact_threshold = 8.5  # Top quartile (high discount impact)\n",
+    "\n",
+    "# Filter for underperforming products\n",
     "underperforming_products = df[\n",
-    "    (df['Profit Margin'] < low_profit_threshold) &\n",
-    "    (df['Discount Impact'] > high_discount_threshold)\n",
-    "]"
+    "    (df[\"Profit Margin\"] < profit_margin_threshold) &  # Low profitability\n",
+    "    (df[\"Discount Impact\"] > discount_impact_threshold)  # High discount impact\n",
+    "]\n",
+    "\n",
+    "# Aggregate data at the product level\n",
+    "underperforming_products_summary = underperforming_products.groupby([\"Product\", \"Segment\"]).agg(\n",
+    "    Total_Sales=(\"Sales\", \"sum\"),\n",
+    "    Total_Profit=(\"Profit\", \"sum\"),\n",
+    "    Avg_Discount_Impact=(\"Discount Impact\", \"mean\"),\n",
+    "    Avg_Profit_Margin=(\"Profit Margin\", \"mean\")\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort by Profit Margin (ascending order)\n",
+    "underperforming_products_summary = underperforming_products_summary.sort_values(\n",
+    "    by=\"Avg_Profit_Margin\", ascending=True\n",
+    ")\n",
+    "\n",
+    "# Rename columns for clarity\n",
+    "underperforming_products_summary.rename(columns={\n",
+    "    \"Total_Sales\": \"Sales\",\n",
+    "    \"Total_Profit\": \"Profit\",\n",
+    "    \"Avg_Discount_Impact\": \"Discount Impact\",\n",
+    "    \"Avg_Profit_Margin\": \"Profit Margin\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Display the final summary table\n",
+    "print(underperforming_products_summary)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f941ec5c",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "output_filename = \"underperforming_products.csv\"\n",
-    "underperforming_products.to_csv(output_filename, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcb73e03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select and sort the required columns\n",
-    "underperforming_products = underperforming_products[[\n",
-    "    'Product', 'Segment', 'Sales', 'Profit', 'Discount Impact', 'Profit Margin'\n",
-    "]].sort_values(by='Profit Margin', ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e3eedf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_filename = \"underperforming_products.csv\"\n",
-    "underperforming_products.to_csv(output_filename, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70944137",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rename columns for better readability\n",
-    "underperforming_products = underperforming_products.rename(columns={\n",
-    "    'Sales': 'Total Sales'\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0609f88a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
