start task number 6

--- a/main.ipynb
+++ b/main.ipynb
@@ -35,6 +35,7 @@
     "import calendar\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.express as px\n",
     "\n",
     "# Paths to your CSV files\n",
     "file1 = './Products.csv'\n",
@@ -2468,6 +2469,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71b726ac",
+   "metadata": {},
+   "source": [
+    " גרף פיזור (Scatter Plot) של הנחות מול רווחיות"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "80352d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[167]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      2\u001b[39m fig1 = px.scatter(problematic_products_summary,\n\u001b[32m      3\u001b[39m                   x=\u001b[33m'\u001b[39m\u001b[33mAvg_Discount_Impact\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m      4\u001b[39m                   y=\u001b[33m'\u001b[39m\u001b[33mAvg_Profit_Margin\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m                           \u001b[33m'\u001b[39m\u001b[33mAvg_Profit_Margin\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mAverage Profit Margin\u001b[39m\u001b[33m'\u001b[39m},\n\u001b[32m     11\u001b[39m                   template=\u001b[33m'\u001b[39m\u001b[33mplotly_dark\u001b[39m\u001b[33m'\u001b[39m)  \u001b[38;5;66;03m# ניתן לבחור תבנית צבעים\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# הצגת הגרף\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43mfig1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/plotly/basedatatypes.py:3414\u001b[39m, in \u001b[36mBaseFigure.show\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   3381\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3382\u001b[39m \u001b[33;03mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[32m   3383\u001b[39m \u001b[33;03mspecified by the renderer argument\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   3410\u001b[39m \u001b[33;03mNone\u001b[39;00m\n\u001b[32m   3411\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3412\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpio\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3414\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/plotly/io/_renderers.py:425\u001b[39m, in \u001b[36mshow\u001b[39m\u001b[34m(fig, renderer, validate, **kwargs)\u001b[39m\n\u001b[32m    420\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    421\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    422\u001b[39m     )\n\u001b[32m    424\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nbformat \u001b[38;5;129;01mor\u001b[39;00m Version(nbformat.__version__) < Version(\u001b[33m\"\u001b[39m\u001b[33m4.2.0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m425\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    426\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    427\u001b[39m     )\n\u001b[32m    429\u001b[39m display_jupyter_version_warnings()\n\u001b[32m    431\u001b[39m ipython_display.display(bundle, raw=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mValueError\u001b[39m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "fig1 = px.scatter(problematic_products_summary,\n",
+    "                  x='Avg_Discount_Impact', \n",
+    "                  y='Avg_Profit_Margin',\n",
+    "                  size='Total_Sales',  # גודל הנקודות לפי מכירות\n",
+    "                  color='Product',     # צבע לפי המוצר\n",
+    "                  hover_name='Product',  # הצגת שם המוצר בהובר\n",
+    "                  title='Discount Impact vs Profit Margin by Product',\n",
+    "                  labels={'Avg_Discount_Impact': 'Average Discount Impact', \n",
+    "                          'Avg_Profit_Margin': 'Average Profit Margin'},\n",
+    "                  template='plotly_dark')  # ניתן לבחור תבנית צבעים\n",
+    "\n",
+    "# הצגת הגרף\n",
+    "fig1.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1ce7d18",
    "metadata": {},
    "source": [
@@ -2476,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 156,
    "id": "b6e23275",
    "metadata": {},
    "outputs": [
@@ -2484,16 +2530,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Product, Segment, Sales, Profit, Discount Impact, Profit Margin]\n",
-      "Index: []\n"
+      "      Product         Segment        Sales       Profit  Discount Impact  \\\n",
+      "5   Carretera  Small Business  1902405.000    99405.000         0.142174   \n",
+      "17       Velo  Small Business  4861756.500   260381.500         0.130930   \n",
+      "2    Amarilla  Small Business  2892099.000   179599.000         0.130267   \n",
+      "14        VTT  Small Business  4155138.000   277638.000         0.124510   \n",
+      "11      Paseo  Small Business  4856385.000   335385.000         0.118225   \n",
+      "8     Montana  Small Business  2922796.500   220671.500         0.114977   \n",
+      "6     Montana      Government  2996969.080   476674.080         0.139898   \n",
+      "9       Paseo      Government  7961223.515  1222126.015         0.129717   \n",
+      "3   Carretera      Government  1829384.200   296994.200         0.129275   \n",
+      "0    Amarilla      Government  2267114.220   404301.720         0.126223   \n",
+      "15       Velo      Government  2732767.240   449507.240         0.117726   \n",
+      "12        VTT      Government  3287267.830   562947.830         0.117988   \n",
+      "10      Paseo       Midmarket   174354.450    38844.450         0.162929   \n",
+      "16       Velo       Midmarket    96811.875    21976.875         0.158440   \n",
+      "13        VTT       Midmarket   126320.250    29585.250         0.157631   \n",
+      "1    Amarilla       Midmarket    80241.300    18631.300         0.153982   \n",
+      "4   Carretera       Midmarket   118181.850    27491.850         0.152843   \n",
+      "7     Montana       Midmarket    38606.400     8836.400         0.149577   \n",
+      "\n",
+      "    Profit Margin  \n",
+      "5        4.818855  \n",
+      "17       5.755797  \n",
+      "2        5.811105  \n",
+      "14       6.290831  \n",
+      "11       6.814560  \n",
+      "8        7.085269  \n",
+      "6       17.313429  \n",
+      "9       17.675260  \n",
+      "3       17.724457  \n",
+      "0       17.965039  \n",
+      "15      18.292305  \n",
+      "12      18.354864  \n",
+      "10      22.471382  \n",
+      "16      22.770641  \n",
+      "13      22.824595  \n",
+      "1       23.067888  \n",
+      "4       23.143828  \n",
+      "7       23.361522  \n"
      ]
     }
    ],
    "source": [
     "# Define thresholds for filtering\n",
-    "profit_margin_threshold = 7  # Bottom quartile (low profitability)\n",
-    "discount_impact_threshold = 8.5  # Top quartile (high discount impact)\n",
+    "profit_margin_threshold = df[\"Profit Margin\"].quantile() # Bottom quartile (low profitability)\n",
+    "discount_impact_threshold = df[\"Discount Impact\"].quantile() # Top quartile (high discount impact)\n",
     "\n",
     "# Filter for underperforming products\n",
     "underperforming_products = df[\n",
