--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "id": "ca7a893b",
    "metadata": {},
    "outputs": [],
@@ -61,20 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "id": "eb62eca5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the CSV files\n",
     "framingham = pd.read_csv(file1)\n",
-    "# GroceryDataset = pd.read_csv(file2)\n",
     "patient_dataset = pd.read_csv(file3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "id": "7133ec43",
    "metadata": {},
    "outputs": [
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "id": "117fbe14",
    "metadata": {},
    "outputs": [
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "id": "f03e8214",
    "metadata": {},
    "outputs": [
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "id": "99779bb9",
    "metadata": {},
    "outputs": [
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 103,
    "id": "797575af",
    "metadata": {},
    "outputs": [
@@ -325,28 +324,26 @@
     "from mlxtend.preprocessing import TransactionEncoder\n",
     "from mlxtend.frequent_patterns import apriori, association_rules\n",
     "\n",
-    "# שלב 1: קריאת הנתונים כעסקאות (רשימת רשימות)\n",
+    "# קריאת הנתונים כעסקאות (רשימת רשימות)\n",
     "transactions = []\n",
     "\n",
     "with open(\"GroceryDataset.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "    for line in f:\n",
-    "        transaction = line.strip().split(',')  # פיצול לפי פסיק\n",
-    "        transaction = [item.strip() for item in transaction]  # הסרת רווחים\n",
+    "        transaction = line.strip().split(',')  \n",
+    "        transaction = [item.strip() for item in transaction] \n",
     "        transactions.append(transaction)\n",
     "\n",
-    "# שלב 2: המרת הנתונים למטריצה בינארית\n",
+    "# המרת הנתונים למטריצה בינארית\n",
     "te = TransactionEncoder()\n",
     "te_ary = te.fit(transactions).transform(transactions)\n",
     "df = pd.DataFrame(te_ary, columns=te.columns_)\n",
     "\n",
-    "# שלב 3: מציאת פריטים תדירים (min_support = תמיכה מינימלית, למשל 0.01)\n",
     "frequent_itemsets = apriori(df, min_support=0.5, use_colnames=True)\n",
     "\n",
-    "# שלב 4: הפקת חוקי איחוד עם מינימום confidence = 0.7\n",
     "if not frequent_itemsets.empty:\n",
     "    rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.7)\n",
     "\n",
-    "# שלב 5: הצגת חוקים נבחרים\n",
+    "# הצגת חוקים נבחרים\n",
     "print(rules[['antecedents', 'consequents', 'support', 'confidence', 'lift']].sort_values(by='lift', ascending=False).head(10))\n"
    ]
   }
